[tool.poetry]
authors = ["Robert Hafner <tedivm@tedivm.com>"]
description = ""
license = "MIT"
name = "tfc_version"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = "^0.21.1"
python = "^3.10"
semver = "^2.13.0"
terrasnek = "^0.1.7"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
tfc_version = 'tfc_version.main:app'
